--- a/public/css/layout/secciones.css
+++ b/public/css/layout/secciones.css
@@ -27,13 +27,13 @@
     align-items: center;
     justify-content: space-between; 
     padding: 20px 25px; 
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
     border-radius: 10px;
     text-decoration: none;
     color: #333;
     width: 220px;  
     height: 100px;  
-    background-color: #f9f9f9;
+    background-color: #f9f9f97a;
     transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
     cursor: pointer;
 }
