--- a/public/css/paginas/busqueda.css
+++ b/public/css/paginas/busqueda.css
@@ -1,4 +1,5 @@
-/* Contenedor principal con dos columnas */
+
+
 .contenedor-principal {
     display: flex;
     gap: 20px;
@@ -8,7 +9,6 @@
     box-sizing: border-box;
 }
 
-/* Columna izquierda (filtros) */
 .columna-izquierda {
     flex: 1;
     min-width: 200px;
@@ -25,7 +25,6 @@
     margin-top: 0;
 }
 
-/* Columna derecha (resultados) */
 .columna-derecha {
     flex: 3;
 }
@@ -34,7 +33,6 @@
     margin-bottom: 20px;
 }
 
-/* Plantilla de servicios */
 .servicio {
     display: flex;
     align-items: center;
@@ -54,36 +52,5 @@
 }
 
 .info-servicio {
-    flex: 1;
-}
-
-.info-servicio h3 {
-    margin: 0 0 5px 0;
-}
-
-.info-servicio p {
-    margin: 0;
-}
-
-/* Botón "+" */
-.btn-mas {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    width: 35px;
-    height: 35px;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-/* Responsive */
-@media (max-width: 900px) {
-    .contenedor-principal {
-        flex-direction: column;
-    }
-
-    .columna-izquierda {
-        margin-bottom: 20px;
-    }
+    flex:
 }
