--- a/public/css/paginas/cliente/perfil_cliente.css
+++ b/public/css/paginas/cliente/perfil_cliente.css
@@ -1,4 +1,3 @@
-/* ===== GENERAL ===== */
 body {
     font-family: "Lexend", sans-serif;
     margin: 0;
@@ -185,11 +184,8 @@ body {
     background-color: #e57373;
 }
 
-/* ===== RESPONSIVE ===== */
 
-/* ===== RESPONSIVE ===== */
 
-/* INTERMEDIO: mantiene foto/nombre arriba y opciones en fila */
 @media (max-width: 900px) and (min-width: 700px) {
     .perfil-box {
         flex-direction: column;
@@ -206,14 +202,13 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        flex-wrap: wrap; /* permite que las opciones bajen si no hay espacio */
+        flex-wrap: wrap; 
         gap: 15px;
         width: auto;
         margin: 0;
     }
 }
 
-/* MUY CHICO: apila todo verticalmente */
 @media (max-width: 699px) {
     .perfil-box {
         flex-direction: column;
