--- a/public/css/paginas/cliente/PerfilSecciones/servicios.css
+++ b/public/css/paginas/cliente/PerfilSecciones/servicios.css
@@ -190,15 +190,27 @@ h1 {
     transform: scale(1.05);
 }
 
-.btn-cancel {
-    background-color: #db3518;
+.btn-cancelar {
+    background: #db3518;
     color: #fff;
+    border: none;
+    padding: 6px 12px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+
+    position: absolute;   
+    top: 50%;             
+    right: 15px;         
+    transform: translateY(-50%);  
 }
 
-.btn-cancel:hover {
-    background-color: #e63e00;
-    transform: scale(1.05);
+.btn-cancelar:hover {
+    background: #e63e00;
+    transform: translateY(-50%) scale(1.05); 
 }
+
 
 .mensaje-modal {
     margin-top: 15px;
@@ -208,16 +220,27 @@ h1 {
 
 /* ===== MODAL CALIFICAR ===== */
 #modalCalificar .modal-content {
-    padding: 25px 20px;
+    padding: 30px 25px;        
+    
     border-radius: 10px;
-    width: 350px;
+    width: 400px;              
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
 }
+
+#modalVerCalificacion p,
+#modalVerCalificacion .resena {
+    font-size: 1.1em;          /* texto de info y reseña más grande */
+    color: #333;
+    margin-bottom: 12px;
+    line-height: 1.5;
+}
+
 
 #modalCalificar h3 {
     margin-bottom: 15px;
     color: #ff914d;
-    font-size: 1.5em;
+        font-size: 1.8em;          
+
     letter-spacing: 1px;
 }
 
@@ -296,4 +319,29 @@ h1 {
 
 #modalCalificar .close {
     display: none;
+}
+
+.btn-calificar,
+.btn-ver-calificacion {
+    background-color: #ff914d;
+        font-family: 'Lexend', sans-serif;
+
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s;
+
+    position: absolute;  
+    top: 50%;            
+    right: 15px;         
+    transform: translateY(-50%);  
+}
+
+.btn-calificar:hover,
+.btn-ver-calificacion:hover {
+    background-color: #cc6c31;
+    transform: translateY(-50%) scale(1.05);  
 }
